✨removing tasks Daily Routine page
