# server/src/controllers/routine/deleteTasks.ts
@@ -17,34 +17,33 @@ interface RemoveTasksReqBody {
 const removeTasks: RequestHandler = async (req: Request<{}, {}, RemoveTasksReqBody>, res) => {
     const { tasksToRemove } = req.body;
 
-    const user = await User.findOne({ _id: req?.user?._id });
+    try {
+        const user = await User.findOne({ _id: req?.user?._id });
+        if (!user) {
+            return res.status(400).send({ error: 'User not found' });
+        }
 
-    if (!user) {
-        return res.status(400).send({
-            error: 'User not found'
+        const routine = await Routine.findOne({ user: user._id }).populate('tasks');
+        if (!routine) {
+            return res.status(400).send({ error: 'Routine not found' });
+        }
+
+        if (tasksToRemove.length > 0) {
+            await RoutineTasks.deleteMany({ _id: { $in: tasksToRemove } });
+            routine.tasks = routine.tasks.filter(task => !tasksToRemove.includes(task._id.toString()));
+            await routine.save();
+        }
+
+        const updatedRoutine = await Routine.findOne({ _id: routine._id }).populate('tasks');
+
+        res.send({
+            message: 'Tasks removed successfully',
+            routine: updatedRoutine,
         });
+    } catch (error) {
+        console.error('Error in removeTasks controller:', error);
+        res.status(500).send({ error: 'Internal Server Error' });
     }
-
-    const routine = await Routine.findOne({ user: user._id }).populate('tasks');
-
-    if (!routine) {
-        return res.status(400).send({
-            error: 'Routine not found'
-        });
-    }
-
-    if (tasksToRemove.length > 0) {
-        await RoutineTasks.deleteMany({ _id: { $in: tasksToRemove } });
-        routine.tasks = routine.tasks.filter(task => !tasksToRemove.includes(task._id.toString()));
-        await routine.save();
-    }
-
-    const updatedRoutine = await Routine.findOne({ _id: routine._id }).populate('tasks');
-
-    res.send({
-        message: 'Tasks removed successfully',
-        routine: updatedRoutine,
-    });
 }
 
 export default authMiddleware(requestMiddleware(removeTasks, { validation: { body: removeTasksSchema } }));
