# server/src/routes.ts
@@ -21,7 +21,7 @@ router.post('/user/', UserController.getUser);
 
 // routine routes
 router.post('/routine/add', RoutineController.addTasks);
-router.post('/routine/delete', RoutineController.deleteTasks);
+router.delete('/routine/delete', RoutineController.removeTasks);
 router.post('/routine/create', RoutineController.create);
 router.get('/routine', RoutineController.get);
 router.post('/routine/cheat', RoutineController.cheatDay);
